exports[`scripted browser: POST navigation goes through a form 1`] = `
[
	{
		"src": "WebRunner",
		"msg": "Scripted browser HTTP request",
		"http": "request",
		"request_uri": "BASE/post",
		"parameters": "a=1&b=x+y",
		"request_method": "POST",
		"browser": "goToUrl"
	},
	{
		"src": "WebRunner",
		"msg": "Scripted browser HTTP response",
		"http": "response",
		"response_status_code": 200,
		"response_status_text": "200-",
		"response_content_type": "text/html; charset=utf-8",
		"response_content": "[html]"
	},
	{
		"src": "WebRunner",
		"msg": "Waiting",
		"url": "BASE/post",
		"browser": "wait",
		"task": "Check",
		"element_type": "id",
		"target": "posted",
		"seconds": 5,
		"result": "INFO",
		"regexp": "a=1&b=x\\\\+y",
		"action": null
	},
	{
		"src": "WebRunner",
		"msg": "Completed processing of webpage",
		"match": "*",
		"url": "BASE/post",
		"browser": "complete",
		"task": "Check",
		"result": "INFO",
		"response_status_code": 200,
		"response_status_text": "200-"
	}
]
`;

exports[`scripted browser: a TypeScript hook drives the page 1`] = `
[
	{
		"src": "Cond",
		"msg": "p",
		"upload": "ph",
		"page_source": "[html]",
		"content_type": "text/html; charset=utf-8",
		"matched_regexp": null,
		"img": "[png]"
	},
	{
		"src": "WebRunner",
		"msg": "Scripted browser HTTP request",
		"http": "request",
		"request_uri": "BASE/start",
		"request_method": "GET",
		"browser": "goToUrl"
	},
	{
		"src": "WebRunner",
		"msg": "Scripted browser HTTP response",
		"http": "response",
		"response_status_code": 200,
		"response_status_text": "200-",
		"response_content_type": "text/html; charset=utf-8",
		"response_content": "[html]"
	},
	{
		"src": "WebRunner",
		"msg": "filled",
		"browser": "hook",
		"field": "username",
		"n": 1
	},
	{
		"src": "WebRunner",
		"msg": "plain",
		"browser": "hook"
	},
	{
		"src": "BROWSER",
		"msg": "Updated placeholder from scripted browser",
		"placeholder": "ph"
	},
	{
		"src": "BROWSER",
		"msg": "All placeholders filled by scripted browser"
	}
]
`;

exports[`scripted browser: failures 1`] = `
{
	"unexpected url": {
		"error": [
			"TestFailureException",
			"Web Runner Exception: WebRunner unexpected url for task: Wrong page"
		],
		"log": [
			{
				"src": "WebRunner",
				"msg": "Scripted browser HTTP request",
				"http": "request",
				"request_uri": "BASE/callback",
				"request_method": "GET",
				"browser": "goToUrl"
			},
			{
				"src": "WebRunner",
				"msg": "Scripted browser HTTP response",
				"http": "response",
				"response_status_code": 200,
				"response_status_text": "200-",
				"response_content_type": "text/html; charset=utf-8",
				"response_content": "[html]"
			},
			{
				"src": "WebRunner",
				"msg": "Unexpected URL for non-optional task",
				"match": "*/elsewhere*",
				"url": "BASE/callback",
				"result": "FAILURE",
				"task": "Wrong page",
				"commands": [
					[
						"click",
						"id",
						"x"
					]
				]
			},
			{
				"src": "WebRunner",
				"msg": "WebRunner unexpected url for task: Wrong page",
				"page_source": "[html]",
				"url": "BASE/callback",
				"content_type": "text/html; charset=utf-8",
				"result": "FAILURE",
				"img": "[png]",
				"error": "WebRunner unexpected url for task: Wrong page",
				"error_class": "TestFailureException"
			}
		]
	},
	"invalid command": {
		"error": [
			"TestFailureException",
			"Web Runner Exception: Invalid Command: dance"
		],
		"log": [
			{
				"src": "WebRunner",
				"msg": "Scripted browser HTTP request",
				"http": "request",
				"request_uri": "BASE/callback",
				"request_method": "GET",
				"browser": "goToUrl"
			},
			{
				"src": "WebRunner",
				"msg": "Scripted browser HTTP response",
				"http": "response",
				"response_status_code": 200,
				"response_status_text": "200-",
				"response_content_type": "text/html; charset=utf-8",
				"response_content": "[html]"
			},
			{
				"src": "WebRunner",
				"msg": "Invalid Command: dance",
				"page_source": "[html]",
				"url": "BASE/callback",
				"content_type": "text/html; charset=utf-8",
				"result": "FAILURE",
				"img": "[png]",
				"error": "Invalid Command: dance",
				"error_class": "TestFailureException"
			}
		]
	},
	"invalid selector": {
		"error": [
			"TestFailureException",
			"Web Runner Exception: Invalid Command Selector: Type: tag Value: x"
		],
		"log": [
			{
				"src": "WebRunner",
				"msg": "Scripted browser HTTP request",
				"http": "request",
				"request_uri": "BASE/callback",
				"request_method": "GET",
				"browser": "goToUrl"
			},
			{
				"src": "WebRunner",
				"msg": "Scripted browser HTTP response",
				"http": "response",
				"response_status_code": 200,
				"response_status_text": "200-",
				"response_content_type": "text/html; charset=utf-8",
				"response_content": "[html]"
			},
			{
				"src": "WebRunner",
				"msg": "Clicking an element",
				"url": "BASE/callback",
				"browser": "click",
				"task": "T",
				"element_type": "tag",
				"target": "x",
				"result": "INFO"
			},
			{
				"src": "WebRunner",
				"msg": "Invalid Command Selector: Type: tag Value: x",
				"page_source": "[html]",
				"url": "BASE/callback",
				"content_type": "text/html; charset=utf-8",
				"result": "FAILURE",
				"img": "[png]",
				"error": "Invalid Command Selector: Type: tag Value: x",
				"error_class": "TestFailureException"
			}
		]
	},
	"invalid action": {
		"error": [
			"TestFailureException",
			"Web Runner Exception: Invalid action: bogus"
		],
		"log": [
			{
				"src": "WebRunner",
				"msg": "Scripted browser HTTP request",
				"http": "request",
				"request_uri": "BASE/callback",
				"request_method": "GET",
				"browser": "goToUrl"
			},
			{
				"src": "WebRunner",
				"msg": "Scripted browser HTTP response",
				"http": "response",
				"response_status_code": 200,
				"response_status_text": "200-",
				"response_content_type": "text/html; charset=utf-8",
				"response_content": "[html]"
			},
			{
				"src": "WebRunner",
				"msg": "Invalid action: bogus",
				"page_source": "[html]",
				"url": "BASE/callback",
				"content_type": "text/html; charset=utf-8",
				"result": "FAILURE",
				"img": "[png]",
				"error": "Invalid action: bogus",
				"error_class": "TestFailureException"
			}
		]
	},
	"missing element": {
		"error": [
			"TestFailureException",
			"Web Runner Exception: Unable to locate element: id 'nope'"
		],
		"log": [
			{
				"src": "WebRunner",
				"msg": "Scripted browser HTTP request",
				"http": "request",
				"request_uri": "BASE/callback",
				"request_method": "GET",
				"browser": "goToUrl"
			},
			{
				"src": "WebRunner",
				"msg": "Scripted browser HTTP response",
				"http": "response",
				"response_status_code": 200,
				"response_status_text": "200-",
				"response_content_type": "text/html; charset=utf-8",
				"response_content": "[html]"
			},
			{
				"src": "WebRunner",
				"msg": "Entering text",
				"url": "BASE/callback",
				"browser": "text",
				"task": "T",
				"element_type": "id",
				"target": "nope",
				"value": "v",
				"result": "INFO"
			},
			{
				"src": "WebRunner",
				"msg": "Unable to locate element: id 'nope'",
				"page_source": "[html]",
				"url": "BASE/callback",
				"content_type": "text/html; charset=utf-8",
				"result": "FAILURE",
				"img": "[png]",
				"error": "Unable to locate element: id 'nope'",
				"error_class": "TestFailureException"
			}
		]
	},
	"wait timeout": {
		"error": [
			"TestFailureException",
			"Web Runner Exception: Timed out waiting: [\\"wait\\",\\"id\\",\\"result\\",1,\\"never\\"]"
		],
		"log": [
			{
				"src": "WebRunner",
				"msg": "Scripted browser HTTP request",
				"http": "request",
				"request_uri": "BASE/callback",
				"request_method": "GET",
				"browser": "goToUrl"
			},
			{
				"src": "WebRunner",
				"msg": "Scripted browser HTTP response",
				"http": "response",
				"response_status_code": 200,
				"response_status_text": "200-",
				"response_content_type": "text/html; charset=utf-8",
				"response_content": "[html]"
			},
			{
				"src": "WebRunner",
				"msg": "Waiting",
				"url": "BASE/callback",
				"browser": "wait",
				"task": "T",
				"element_type": "id",
				"target": "result",
				"seconds": 1,
				"result": "INFO",
				"regexp": "never",
				"action": null
			},
			{
				"src": "WebRunner",
				"msg": "Timed out waiting: [\\"wait\\",\\"id\\",\\"result\\",1,\\"never\\"]",
				"page_source": "[html]",
				"url": "BASE/callback",
				"content_type": "text/html; charset=utf-8",
				"result": "FAILURE",
				"img": "[png]",
				"error": "Timed out waiting: [\\"wait\\",\\"id\\",\\"result\\",1,\\"never\\"]",
				"error_class": "TestFailureException"
			}
		]
	},
	"visible timeout": {
		"error": [
			"TestFailureException",
			"Web Runner Exception: Timed out waiting for element visibility: [\\"wait-element-visible\\",\\"id\\",\\"nope\\",1]"
		],
		"log": [
			{
				"src": "WebRunner",
				"msg": "Scripted browser HTTP request",
				"http": "request",
				"request_uri": "BASE/callback",
				"request_method": "GET",
				"browser": "goToUrl"
			},
			{
				"src": "WebRunner",
				"msg": "Scripted browser HTTP response",
				"http": "response",
				"response_status_code": 200,
				"response_status_text": "200-",
				"response_content_type": "text/html; charset=utf-8",
				"response_content": "[html]"
			},
			{
				"src": "WebRunner",
				"msg": "Timed out waiting for element visibility: [\\"wait-element-visible\\",\\"id\\",\\"nope\\",1]",
				"page_source": "[html]",
				"url": "BASE/callback",
				"content_type": "text/html; charset=utf-8",
				"result": "FAILURE",
				"img": "[png]",
				"error": "Timed out waiting for element visibility: [\\"wait-element-visible\\",\\"id\\",\\"nope\\",1]",
				"error_class": "TestFailureException"
			}
		]
	},
	"invisible timeout": {
		"error": [
			"TestFailureException",
			"Web Runner Exception: Timed out waiting for element to become invisible: [\\"wait-element-invisible\\",\\"id\\",\\"result\\",1]"
		],
		"log": [
			{
				"src": "WebRunner",
				"msg": "Scripted browser HTTP request",
				"http": "request",
				"request_uri": "BASE/callback",
				"request_method": "GET",
				"browser": "goToUrl"
			},
			{
				"src": "WebRunner",
				"msg": "Scripted browser HTTP response",
				"http": "response",
				"response_status_code": 200,
				"response_status_text": "200-",
				"response_content_type": "text/html; charset=utf-8",
				"response_content": "[html]"
			},
			{
				"src": "WebRunner",
				"msg": "Timed out waiting for element to become invisible: [\\"wait-element-invisible\\",\\"id\\",\\"result\\",1]",
				"page_source": "[html]",
				"url": "BASE/callback",
				"content_type": "text/html; charset=utf-8",
				"result": "FAILURE",
				"img": "[png]",
				"error": "Timed out waiting for element to become invisible: [\\"wait-element-invisible\\",\\"id\\",\\"result\\",1]",
				"error_class": "TestFailureException"
			}
		]
	},
	"no task name": {
		"error": [
			"TestFailureException",
			"Web Runner Exception: Invalid Task Definition: no 'task' property"
		],
		"log": [
			{
				"src": "WebRunner",
				"msg": "Scripted browser HTTP request",
				"http": "request",
				"request_uri": "BASE/callback",
				"request_method": "GET",
				"browser": "goToUrl"
			},
			{
				"src": "WebRunner",
				"msg": "Scripted browser HTTP response",
				"http": "response",
				"response_status_code": 200,
				"response_status_text": "200-",
				"response_content_type": "text/html; charset=utf-8",
				"response_content": "[html]"
			},
			{
				"src": "WebRunner",
				"msg": "Invalid Task Definition: no 'task' property",
				"page_source": "[html]",
				"url": "BASE/callback",
				"content_type": "text/html; charset=utf-8",
				"result": "FAILURE",
				"img": "[png]",
				"error": "Invalid Task Definition: no 'task' property",
				"error_class": "TestFailureException"
			}
		]
	},
	"placeholder required": {
		"error": [
			"TestFailureException",
			"Web Runner Exception: Timed out waiting: [\\"wait\\",\\"id\\",\\"result\\",1,\\"done\\",\\"update-image-placeholder\\"]"
		],
		"log": [
			{
				"src": "WebRunner",
				"msg": "Scripted browser HTTP request",
				"http": "request",
				"request_uri": "BASE/callback",
				"request_method": "GET",
				"browser": "goToUrl"
			},
			{
				"src": "WebRunner",
				"msg": "Scripted browser HTTP response",
				"http": "response",
				"response_status_code": 200,
				"response_status_text": "200-",
				"response_content_type": "text/html; charset=utf-8",
				"response_content": "[html]"
			},
			{
				"src": "WebRunner",
				"msg": "Waiting",
				"url": "BASE/callback",
				"browser": "wait",
				"task": "T",
				"element_type": "id",
				"target": "result",
				"seconds": 1,
				"result": "INFO",
				"regexp": "done",
				"action": "update-image-placeholder"
			},
			{
				"src": "WebRunner",
				"msg": "Timed out waiting: [\\"wait\\",\\"id\\",\\"result\\",1,\\"done\\",\\"update-image-placeholder\\"]",
				"page_source": "[html]",
				"url": "BASE/callback",
				"content_type": "text/html; charset=utf-8",
				"result": "FAILURE",
				"img": "[png]",
				"error": "Timed out waiting: [\\"wait\\",\\"id\\",\\"result\\",1,\\"done\\",\\"update-image-placeholder\\"]",
				"error_class": "TestFailureException"
			}
		]
	}
}
`;

exports[`scripted browser: optional placeholder update without a placeholder 1`] = `
[
	{
		"src": "WebRunner",
		"msg": "Scripted browser HTTP request",
		"http": "request",
		"request_uri": "BASE/callback",
		"request_method": "GET",
		"browser": "goToUrl"
	},
	{
		"src": "WebRunner",
		"msg": "Scripted browser HTTP response",
		"http": "response",
		"response_status_code": 200,
		"response_status_text": "200-",
		"response_content_type": "text/html; charset=utf-8",
		"response_content": "[html]"
	},
	{
		"src": "WebRunner",
		"msg": "Waiting",
		"url": "BASE/callback",
		"browser": "wait",
		"task": "Verify",
		"element_type": "id",
		"target": "result",
		"seconds": 5,
		"result": "INFO",
		"regexp": "done",
		"action": "update-image-placeholder-optional"
	},
	{
		"src": "BROWSER",
		"msg": "Skipping optional placeholder update as placeholder not found.",
		"placeholder": null
	},
	{
		"src": "WebRunner",
		"msg": "Completed processing of webpage",
		"match": "*",
		"url": "BASE/callback",
		"browser": "complete",
		"task": "Verify",
		"result": "INFO",
		"response_status_code": 200,
		"response_status_text": "200-"
	}
]
`;

exports[`scripted browser: tasks, commands, optional parts, placeholders and match-limit 1`] = `
[
	{
		"src": "SomeCondition",
		"msg": "placeholder",
		"upload": "ph1",
		"page_source": "[html]",
		"content_type": "text/html; charset=utf-8",
		"matched_regexp": "done \\\\d+",
		"img": "[png]"
	},
	{
		"src": "WebRunner",
		"msg": "Scripted browser HTTP request",
		"http": "request",
		"request_uri": "BASE/start?x=1",
		"request_method": "GET",
		"browser": "goToUrl"
	},
	{
		"src": "WebRunner",
		"msg": "Scripted browser HTTP response",
		"http": "response",
		"response_status_code": 200,
		"response_status_text": "200-",
		"response_content_type": "text/html; charset=utf-8",
		"response_content": "[html]"
	},
	{
		"src": "WebRunner",
		"msg": "Entering text",
		"url": "BASE/start?x=1",
		"browser": "text",
		"task": "Login",
		"element_type": "id",
		"target": "username",
		"value": "user",
		"result": "INFO"
	},
	{
		"src": "WebRunner",
		"msg": "Entering text",
		"url": "BASE/start?x=1",
		"browser": "text",
		"task": "Login",
		"element_type": "name",
		"target": "nope",
		"value": "x",
		"result": "INFO"
	},
	{
		"src": "WebRunner",
		"msg": "Element not found, skipping as 'text' command is marked 'optional'",
		"url": "BASE/start?x=1",
		"browser": "text",
		"task": "Login",
		"element_type": "name",
		"target": "nope",
		"value": "x",
		"result": "INFO"
	},
	{
		"src": "WebRunner",
		"msg": "Clicking an element",
		"url": "BASE/start?x=1",
		"browser": "click",
		"task": "Login",
		"element_type": "id",
		"target": "nope",
		"result": "INFO"
	},
	{
		"src": "WebRunner",
		"msg": "Element not found, skipping as 'click' command is marked 'optional'",
		"url": "BASE/start?x=1",
		"browser": "click",
		"task": "Login",
		"element_type": "id",
		"target": "nope",
		"result": "INFO"
	},
	{
		"src": "WebRunner",
		"msg": "Clicking an element",
		"url": "BASE/start?x=1",
		"browser": "click",
		"task": "Login",
		"element_type": "id",
		"target": "submit",
		"result": "INFO"
	},
	{
		"src": "WebRunner",
		"msg": "Completed processing of webpage",
		"match": "*/start*",
		"url": "BASE/callback?username=user&password=",
		"browser": "complete",
		"task": "Login",
		"result": "INFO",
		"response_status_code": 200,
		"response_status_text": "200-"
	},
	{
		"src": "WebRunner",
		"msg": "Skipping optional task due to URL mismatch",
		"match": "*/elsewhere*",
		"url": "BASE/callback?username=user&password=",
		"browser": "skip",
		"task": "Not this one",
		"commands": [
			[
				"click",
				"id",
				"x"
			]
		]
	},
	{
		"src": "WebRunner",
		"msg": "Waiting",
		"url": "BASE/callback?username=user&password=",
		"browser": "wait",
		"task": "Verify Complete",
		"element_type": "id",
		"target": "result",
		"seconds": 5,
		"result": "INFO",
		"regexp": "done \\\\d+",
		"action": "update-image-placeholder"
	},
	{
		"src": "BROWSER",
		"msg": "Updated placeholder from scripted browser",
		"placeholder": "ph1"
	},
	{
		"src": "BROWSER",
		"msg": "All placeholders filled by scripted browser"
	},
	{
		"src": "WebRunner",
		"msg": "Waiting",
		"url": "BASE/callback?username=user&password=",
		"browser": "wait",
		"task": "Verify Complete",
		"element_type": "contains",
		"target": "callback",
		"seconds": 5,
		"result": "INFO",
		"regexp": null,
		"action": null
	},
	{
		"src": "WebRunner",
		"msg": "Waiting",
		"url": "BASE/callback?username=user&password=",
		"browser": "wait",
		"task": "Verify Complete",
		"element_type": "match",
		"target": ".*callback.*",
		"seconds": 5,
		"result": "INFO",
		"regexp": null,
		"action": null
	},
	{
		"src": "WebRunner",
		"msg": "Waiting",
		"url": "BASE/callback?username=user&password=",
		"browser": "wait",
		"task": "Verify Complete",
		"element_type": "css",
		"target": "#submission_complete",
		"seconds": 5,
		"result": "INFO",
		"regexp": null,
		"action": null
	},
	{
		"src": "WebRunner",
		"msg": "Completed processing of webpage",
		"match": "*/callback*",
		"url": "BASE/callback?username=user&password=",
		"browser": "complete",
		"task": "Verify Complete",
		"result": "INFO",
		"response_status_code": 200,
		"response_status_text": "200-"
	},
	{
		"src": "WebRunner",
		"msg": "Completed processing of webpage",
		"match": "*",
		"url": "BASE/callback?username=user&password=",
		"browser": "complete",
		"task": "No commands",
		"result": "INFO",
		"response_status_code": 200,
		"response_status_text": "200-"
	}
]
`;
